@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-05
+2012-07-27 Andy Salnikov
+- new method CsPadFilterV1::filter() which takes also pixel status array
+
 Tag: V00-03-04
 2012-07-27 Andy Salnikov
 - small fixes to doxygen comments
